--- a/src/styles/modules/layout/mobileMenu.module.scss
+++ b/src/styles/modules/layout/mobileMenu.module.scss
@@ -11,6 +11,7 @@
     z-index: 3;
     transform: translateY(100%);
     transition: transform 0.5s ease-in-out;
+    overflow-y: scroll;
 
     &.open {
         transform: translateY(0);
@@ -21,18 +22,23 @@
     }
 
     ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1em;
-        height: 100vh;
+        display: block;
+        text-align: center;
+        padding-top: rem-calc(112);
+        height: 100%;
+
+        @include phablet {
+            padding-top: rem-calc(144);
+        }
 
         li {
+            margin-bottom: rem-calc(16);
+
             &:last-of-type {
                 border-top: 3px solid $lightgrey-color;
-                padding-top: 1em;
-                margin-top: 0.75em;
+                padding-top: rem-calc(16);
+                margin-top: rem-calc(16);
+                padding-bottom: rem-calc(36);
             }
 
             a {
@@ -51,7 +57,7 @@
 
                 .dots {
                     color: $secondary-color;
-                    font-size: 25px;
+                    font-size: rem-calc(24);
                 }
 
                 &.whapp {
@@ -59,7 +65,7 @@
 
                     > i {
                         margin-right: 0.5em;
-                        font-size: 1.25em;
+                        font-size: rem-calc(20);
                         color: #3fd252;
                     }
                 }
